1. Add 'Edit settings' link in Profile page. 2. Turned off impromper button capitalization 3. Make close-account warning visible in dark mode. 4. Removed all language-specific 'Enable lexicon' toggles and replaced them with the 'Enable all lexicons' toggle that used to be on the Profile page. 5. Fixed the overlap between the toggle and the underlying text in narrow-window situations.

--- a/liwords-ui/src/base.scss
+++ b/liwords-ui/src/base.scss
@@ -635,7 +635,6 @@ ul {
       background-color: m($button);
       color: m($button-text);
     }
-    text-transform: capitalize;
     border: 0;
     outline: 0;
     transition: none;
